p2/force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>