p2/force-app/main/default/objects/Survey__c/fields/How_satisfied_were_you_with_the_Training__c.field-meta.xml
<CustomField>
    <fullName>How_satisfied_were_you_with_the_Training__c</fullName>
    <inlineHelpText>1- Not very
5- Very much</inlineHelpText>
    <label>How satisfied were you with the Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers1</valueSetName>
    </valueSet>
</CustomField>