p2/force-app/main/default/objects/Survey__c/fields/Level_of__c.field-meta.xml
<CustomField>
    <fullName>Level_of__c</fullName>
    <inlineHelpText>1- Poor
5- Great</inlineHelpText>
    <label>Last week&apos;s topics understanding rate:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers1</valueSetName>
    </valueSet>
</CustomField>