p2/force-app/main/default/objects/Survey__c/fields/Material_content_provided_were_helpful__c.field-meta.xml
<CustomField>
    <fullName>Material_content_provided_were_helpful__c</fullName>
    <label>Material &amp; content provided were helpful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers2</valueSetName>
    </valueSet>
</CustomField>