p2/force-app/main/default/objects/Survey__c/fields/Overall_feedback_Training_Trainer_QC__c.field-meta.xml
<CustomField>
    <fullName>Overall_feedback_Training_Trainer_QC__c</fullName>
    <label>Overall feedback (Training / Trainer/QC)</label>
    <type>TextArea</type>
</CustomField>