p2/force-app/main/default/objects/Survey__c/fields/Pace_of_training_for_lasst_week__c.field-meta.xml
<CustomField>
    <fullName>Pace_of_training_for_lasst_week__c</fullName>
    <label>Pace of training for lasst week:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too slow</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Too fast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>