p2/force-app/main/default/objects/Survey__c/fields/Questions_were_encouraged_and_answered__c.field-meta.xml
<CustomField>
    <fullName>Questions_were_encouraged_and_answered__c</fullName>
    <label>Questions were encouraged and answered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers2</valueSetName>
    </valueSet>
</CustomField>