p2/force-app/main/default/objects/Survey__c/fields/Specific_issues_you_d_like_to_mention__c.field-meta.xml
<CustomField>
    <fullName>Specific_issues_you_d_like_to_mention__c</fullName>
    <label>Specific issues you&apos;d like to mention?</label>
    <type>TextArea</type>
</CustomField>