p2/force-app/main/default/objects/Survey__c/fields/Training_activities_were_well_organized__c.field-meta.xml
<CustomField>
    <fullName>Training_activities_were_well_organized__c</fullName>
    <label>Training activities were well organized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers2</valueSetName>
    </valueSet>
</CustomField>