p2/force-app/main/default/objects/Survey__c/fields/Training_and_Projects_met_my_expectation__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Projects_met_my_expectation__c</fullName>
    <label>Training and Projects met my expectation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surveys_answers2</valueSetName>
    </valueSet>
</CustomField>