p2/force-app/main/default/objects/Survey__c/fields/Training_location__c.field-meta.xml
<CustomField>
    <fullName>Training_location__c</fullName>
    <label>Training location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTA</fullName>
            </value>
            <value>
                <fullName>WVU</fullName>
            </value>
            <value>
                <fullName>USF</fullName>
            </value>
            <value>
                <fullName>Reston</fullName>
            </value>
            <value>
                <fullName>NY</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>