p2/force-app/main/default/objects/Survey__c/fields/Were_your_one_on_one__c.field-meta.xml
<CustomField>
    <fullName>Were_your_one_on_one__c</fullName>
    <label>Were your one-on-one conducted last week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>