p2/force-app/main/default/objects/Survey__c/fields/What_batch__c.field-meta.xml
<CustomField>
    <fullName>What_batch__c</fullName>
    <label>What batch are you in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2010 Oct26 Java/Azure (Nick J)</fullName>
            </value>
            <value>
                <fullName>2010 Oct26 Java (Sophia)</fullName>
            </value>
            <value>
                <fullName>2011 Nov02 Salesforce (Harvey)</fullName>
            </value>
            <value>
                <fullName>2011 Nov16 ServiceNow</fullName>
            </value>
            <value>
                <fullName>2011 Nov30 Java (Tim)</fullName>
            </value>
            <value>
                <fullName>2012 Dec07 Java (Ben)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>