p2/force-app/main/default/objects/Survey__c/fields/What_was_your_most_recently_completed_we__c.field-meta.xml
<CustomField>
    <fullName>What_was_your_most_recently_completed_we__c</fullName>
    <label>Most recently completed week of training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
            <value>
                <fullName>Week 3</fullName>
            </value>
            <value>
                <fullName>Week 4</fullName>
            </value>
            <value>
                <fullName>Week 5</fullName>
            </value>
            <value>
                <fullName>Week 6</fullName>
            </value>
            <value>
                <fullName>Week 7</fullName>
            </value>
            <value>
                <fullName>Week 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>